<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/Cases"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textTrueTrue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="0.388" />

    <TextView
        android:id="@+id/textFalseFalse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="116dp"
        android:text="@string/Case4"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textFalseTrue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Case3"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textFalseFalse"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textTrueFalse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Case2"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textFalseTrue"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textTrueTrue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Case1"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textTrueFalse"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputTrueTrue"
        android:layout_width="114dp"
        android:layout_height="46dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:hint="@string/answer1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/textTrueTrue"
        app:layout_constraintTop_toBottomOf="@+id/textAB" />

    <EditText
        android:id="@+id/inputTrueFalse"
        android:layout_width="114dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/answer1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toEndOf="@+id/textTrueFalse"
        app:layout_constraintTop_toBottomOf="@+id/inputTrueTrue" />

    <EditText
        android:id="@+id/inputFalseTrue"
        android:layout_width="114dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/answer1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/textFalseTrue"
        app:layout_constraintTop_toBottomOf="@+id/inputTrueFalse" />

    <EditText
        android:id="@+id/inputFalseFalse"
        android:layout_width="114dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/answer1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toEndOf="@+id/textFalseFalse"
        app:layout_constraintTop_toBottomOf="@+id/inputFalseTrue"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/textAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/a_b"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toEndOf="@+id/textOptions"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

</androidx.constraintlayout.widget.ConstraintLayout>